@@ -30,6 +30,8 @@ OpenDDS::DCPS::DataSampleHeader::DataSampleHeader()
   , sequence_()
   , source_timestamp_sec_(0)
   , source_timestamp_nanosec_(0)
+  , lifespan_duration_sec_(0)
+  , lifespan_duration_nanosec_(0)
   , publication_id_(GUID_UNKNOWN)
   , publisher_id_(GUID_UNKNOWN)
   , marshaled_size_(0)
@@ -60,6 +62,8 @@ OpenDDS::DCPS::DataSampleHeader::DataSampleHeader(ACE_Message_Block& buffer)
   , sequence_()
   , source_timestamp_sec_(0)
   , source_timestamp_nanosec_(0)
+  , lifespan_duration_sec_(0)
+  , lifespan_duration_nanosec_(0)
   , publication_id_(GUID_UNKNOWN)
 {
   this->init(&buffer);
